tests/baselines/reference/privateNameNotAccessibleOutsideDefiningClass.errors.txt
<<<<<<< HEAD
tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts(7,9): error TS2339: Property '#foo' does not exist on type 'A'.
tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts(7,9): error TS18013: Property '#foo' is not accessible outside class 'A' because it has a private name.
=======
tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts(5,9): error TS18013: Property '#foo' is not accessible outside class 'A' because it has a private identifier.
>>>>>>> Add private instance field transformation, pr feedback


==== tests/cases/conformance/classes/members/privateNames/privateNameNotAccessibleOutsideDefiningClass.ts (1 errors) ====
    class A {
        #foo: number = 3;
    }
    
    new A().#foo = 4;               // Error
            ~~~~
<<<<<<< HEAD
!!! error TS2339: Property '#foo' does not exist on type 'A'.
            ~~~~
!!! error TS18013: Property '#foo' is not accessible outside class 'A' because it has a private name.
=======
!!! error TS18013: Property '#foo' is not accessible outside class 'A' because it has a private identifier.
>>>>>>> Add private instance field transformation, pr feedback
    